--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,9 +18,9 @@
 
         <Button
             android:id="@+id/buttonMinus"
-            android:layout_width="70dp"
-            android:layout_height="70dp"
-            android:layout_marginTop="18dp"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_marginTop="8dp"
             android:background="@drawable/background_function"
             android:text="-"
             android:textSize="30sp"
@@ -30,48 +30,52 @@
 
         <Button
             android:id="@+id/button4"
-            android:layout_width="70dp"
-            android:layout_height="70dp"
-            android:layout_marginEnd="24dp"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_marginStart="14dp"
+            android:layout_marginEnd="10dp"
             android:background="@drawable/background_numbers"
             android:text="4"
             android:textSize="30sp"
             app:layout_constraintBaseline_toBaselineOf="@+id/button5"
             app:layout_constraintEnd_toStartOf="@+id/button5"
+            app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="@+id/button7"
             tools:ignore="MissingConstraints" />
 
         <Button
             android:id="@+id/button1"
-            android:layout_width="70dp"
-            android:layout_height="70dp"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
             android:layout_marginEnd="24dp"
             android:background="@drawable/background_numbers"
             android:text="1"
             android:textSize="30sp"
             app:layout_constraintBaseline_toBaselineOf="@+id/button2"
             app:layout_constraintEnd_toStartOf="@+id/button2"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="@+id/button4"
             tools:ignore="MissingConstraints" />
 
         <Button
             android:id="@+id/button0"
-            android:layout_width="70dp"
-            android:layout_height="70dp"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
             android:layout_marginEnd="24dp"
             android:background="@drawable/background_numbers"
             android:text="0"
             android:textSize="30sp"
             app:layout_constraintBaseline_toBaselineOf="@+id/buttonDot"
             app:layout_constraintEnd_toStartOf="@+id/buttonDot"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="@+id/button1"
             tools:ignore="MissingConstraints" />
 
         <Button
             android:id="@+id/buttonDot"
-            android:layout_width="70dp"
-            android:layout_height="70dp"
-            android:layout_marginEnd="16dp"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_marginEnd="8dp"
             android:background="@drawable/background_numbers"
             android:text="."
             android:textSize="30sp"
@@ -81,25 +85,24 @@
 
         <Button
             android:id="@+id/buttonEquals"
-            android:layout_width="70dp"
-            android:layout_height="70dp"
-            android:layout_marginTop="18dp"
-            android:layout_marginBottom="65dp"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_marginTop="8dp"
             android:background="@drawable/background_equals"
             android:text="="
             android:textSize="30sp"
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintBottom_toBottomOf="@+id/button0"
             app:layout_constraintEnd_toEndOf="@+id/buttonAdd"
             app:layout_constraintTop_toBottomOf="@+id/buttonAdd"
             tools:ignore="MissingConstraints" />
 
         <Button
             android:id="@+id/negSymobol"
-            android:layout_width="70dp"
-            android:layout_height="70dp"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
             android:layout_marginEnd="12dp"
             android:background="@drawable/background_numbers"
-            android:text="-"
+            android:text="+/-"
             android:textSize="30sp"
             app:layout_constraintBaseline_toBaselineOf="@+id/buttonEquals"
             app:layout_constraintEnd_toStartOf="@+id/buttonEquals"
@@ -107,9 +110,9 @@
 
         <Button
             android:id="@+id/button2"
-            android:layout_width="70dp"
-            android:layout_height="70dp"
-            android:layout_marginEnd="16dp"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_marginEnd="8dp"
             android:background="@drawable/background_numbers"
             android:text="2"
             android:textSize="30sp"
@@ -119,8 +122,8 @@
 
         <Button
             android:id="@+id/button3"
-            android:layout_width="70dp"
-            android:layout_height="70dp"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
             android:layout_marginEnd="12dp"
             android:background="@drawable/background_numbers"
             android:text="3"
@@ -131,9 +134,9 @@
 
         <Button
             android:id="@+id/buttonAdd"
-            android:layout_width="70dp"
-            android:layout_height="70dp"
-            android:layout_marginTop="18dp"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_marginTop="8dp"
             android:background="@drawable/background_function"
             android:text="+"
             android:textSize="30sp"
@@ -143,9 +146,9 @@
 
         <Button
             android:id="@+id/button5"
-            android:layout_width="70dp"
-            android:layout_height="70dp"
-            android:layout_marginEnd="16dp"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_marginEnd="9dp"
             android:background="@drawable/background_numbers"
             android:text="5"
             android:textSize="30sp"
@@ -155,8 +158,8 @@
 
         <Button
             android:id="@+id/button6"
-            android:layout_width="70dp"
-            android:layout_height="70dp"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
             android:layout_marginEnd="12dp"
             android:background="@drawable/background_numbers"
             android:text="6"
@@ -167,9 +170,9 @@
 
         <Button
             android:id="@+id/buttonMultiply"
-            android:layout_width="70dp"
-            android:layout_height="70dp"
-            android:layout_marginTop="15dp"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_marginTop="8dp"
             android:background="@drawable/background_function"
             android:text="×"
             android:textSize="30sp"
@@ -179,8 +182,8 @@
 
         <Button
             android:id="@+id/button9"
-            android:layout_width="70dp"
-            android:layout_height="70dp"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
             android:layout_marginEnd="12dp"
             android:background="@drawable/background_numbers"
             android:text="9"
@@ -190,9 +193,9 @@
 
         <Button
             android:id="@+id/button8"
-            android:layout_width="70dp"
-            android:layout_height="70dp"
-            android:layout_marginEnd="16dp"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_marginEnd="8dp"
             android:background="@drawable/background_numbers"
             android:text="8"
             android:textSize="30sp"
@@ -201,22 +204,24 @@
 
         <Button
             android:id="@+id/button7"
-            android:layout_width="70dp"
-            android:layout_height="70dp"
-            android:layout_marginEnd="24dp"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_marginStart="14dp"
+            android:layout_marginEnd="10dp"
             android:background="@drawable/background_numbers"
             android:text="7"
             android:textSize="30sp"
             app:layout_constraintBaseline_toBaselineOf="@+id/button8"
             app:layout_constraintEnd_toStartOf="@+id/button8"
+            app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="@+id/clearText" />
 
         <EditText
             android:id="@+id/result"
             android:layout_width="0dp"
-            android:layout_height="141dp"
+            android:layout_height="139dp"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
             android:background="@drawable/background"
             android:ems="10"
@@ -269,22 +274,22 @@
 
         <Button
             android:id="@+id/buttonDevide"
-            android:layout_width="70dp"
-            android:layout_height="70dp"
-            android:layout_marginTop="24dp"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_marginTop="16dp"
             android:background="@drawable/background_function"
             android:text="÷"
             android:textSize="30sp"
-            app:layout_constraintEnd_toEndOf="@+id/newNumber"
+            app:layout_constraintEnd_toEndOf="@+id/result"
             app:layout_constraintStart_toEndOf="@+id/percentage"
             app:layout_constraintTop_toBottomOf="@+id/newNumber"
             tools:ignore="MissingConstraints" />
 
         <Button
             android:id="@+id/percentage"
-            android:layout_width="70dp"
-            android:layout_height="70dp"
-            android:layout_marginStart="16dp"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_marginStart="10dp"
             android:background="@drawable/background_function"
             android:text="%"
             android:textSize="30sp"
@@ -293,23 +298,22 @@
 
         <Button
             android:id="@+id/clearText"
-            android:layout_width="70dp"
-            android:layout_height="70dp"
-            android:layout_marginStart="25dp"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
             android:background="@drawable/background_buttonclear"
             android:text="AC"
             android:textSize="30sp"
             app:layout_constraintBaseline_toBaselineOf="@+id/buttonBracket"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintStart_toStartOf="@+id/result"
             tools:ignore="MissingConstraints" />
 
         <Button
             android:id="@+id/buttonBracket"
-            android:layout_width="70dp"
-            android:layout_height="70dp"
-            android:layout_marginStart="16dp"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_marginStart="10dp"
             android:background="@drawable/background_function"
-            android:text="()"
+            android:text="⇐"
             android:textSize="30sp"
             app:layout_constraintBaseline_toBaselineOf="@+id/percentage"
             app:layout_constraintStart_toEndOf="@+id/clearText" />
