--- a/app/src/main/res/values/appIcon_background.xml
+++ b/app/src/main/res/values/appIcon_background.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="appicon_background">#3C4043</color>
+    <color name="appicon_background">#3DDC84</color>
 </resources>
