--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -44,6 +44,7 @@
             android:layout_height="45dp"
             android:layout_marginEnd="8dp"
             android:background="@drawable/background_land"
+            android:inputType="text"
             android:text="log"
             android:textSize="16sp"
             app:layout_constraintBaseline_toBaselineOf="@+id/button0"
@@ -55,6 +56,7 @@
             android:layout_height="45dp"
             android:layout_marginEnd="8dp"
             android:background="@drawable/background_land"
+            android:inputType="text"
             android:text="Pi"
             android:textSize="16sp"
             app:layout_constraintBaseline_toBaselineOf="@+id/buttonLog"
@@ -392,7 +394,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            app:layout_constraintGuide_end="435dp" />
+            app:layout_constraintGuide_percent="0.5" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
