--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,26 +20,25 @@
             android:id="@+id/buttonMinus"
             android:layout_width="80dp"
             android:layout_height="80dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginStart="8dp"
             android:background="@drawable/background_function"
             android:text="-"
             android:textSize="30sp"
+            app:layout_constraintBaseline_toBaselineOf="@+id/button6"
             app:layout_constraintEnd_toEndOf="@+id/buttonMultiply"
-            app:layout_constraintTop_toBottomOf="@+id/buttonMultiply"
+            app:layout_constraintStart_toEndOf="@+id/button6"
             tools:ignore="MissingConstraints" />
 
         <Button
             android:id="@+id/button4"
             android:layout_width="80dp"
             android:layout_height="80dp"
-            android:layout_marginStart="14dp"
-            android:layout_marginEnd="10dp"
+            android:layout_marginEnd="8dp"
             android:background="@drawable/background_numbers"
             android:text="4"
             android:textSize="30sp"
             app:layout_constraintBaseline_toBaselineOf="@+id/button5"
             app:layout_constraintEnd_toStartOf="@+id/button5"
-            app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="@+id/button7"
             tools:ignore="MissingConstraints" />
 
@@ -47,13 +46,12 @@
             android:id="@+id/button1"
             android:layout_width="80dp"
             android:layout_height="80dp"
-            android:layout_marginEnd="24dp"
+            android:layout_marginEnd="8dp"
             android:background="@drawable/background_numbers"
             android:text="1"
             android:textSize="30sp"
             app:layout_constraintBaseline_toBaselineOf="@+id/button2"
             app:layout_constraintEnd_toStartOf="@+id/button2"
-            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="@+id/button4"
             tools:ignore="MissingConstraints" />
 
@@ -61,13 +59,12 @@
             android:id="@+id/button0"
             android:layout_width="80dp"
             android:layout_height="80dp"
-            android:layout_marginEnd="24dp"
+            android:layout_marginEnd="8dp"
             android:background="@drawable/background_numbers"
             android:text="0"
             android:textSize="30sp"
             app:layout_constraintBaseline_toBaselineOf="@+id/buttonDot"
             app:layout_constraintEnd_toStartOf="@+id/buttonDot"
-            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="@+id/button1"
             tools:ignore="MissingConstraints" />
 
@@ -75,145 +72,153 @@
             android:id="@+id/buttonDot"
             android:layout_width="80dp"
             android:layout_height="80dp"
-            android:layout_marginEnd="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="4dp"
             android:background="@drawable/background_numbers"
             android:text="."
             android:textSize="30sp"
-            app:layout_constraintBaseline_toBaselineOf="@+id/negSymobol"
-            app:layout_constraintEnd_toStartOf="@+id/negSymobol"
+            app:layout_constraintEnd_toStartOf="@+id/guideline3"
+            app:layout_constraintTop_toBottomOf="@+id/button2"
             tools:ignore="MissingConstraints" />
 
         <Button
             android:id="@+id/buttonEquals"
             android:layout_width="80dp"
             android:layout_height="80dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginStart="8dp"
             android:background="@drawable/background_equals"
             android:text="="
             android:textSize="30sp"
-            app:layout_constraintBottom_toBottomOf="@+id/button0"
+            app:layout_constraintBaseline_toBaselineOf="@+id/negSymobol"
             app:layout_constraintEnd_toEndOf="@+id/buttonAdd"
-            app:layout_constraintTop_toBottomOf="@+id/buttonAdd"
+            app:layout_constraintStart_toEndOf="@+id/negSymobol"
             tools:ignore="MissingConstraints" />
 
         <Button
             android:id="@+id/negSymobol"
             android:layout_width="80dp"
             android:layout_height="80dp"
-            android:layout_marginEnd="12dp"
+            android:layout_marginStart="4dp"
+            android:layout_marginTop="8dp"
             android:background="@drawable/background_numbers"
             android:text="+/-"
             android:textSize="30sp"
-            app:layout_constraintBaseline_toBaselineOf="@+id/buttonEquals"
-            app:layout_constraintEnd_toStartOf="@+id/buttonEquals"
+            app:layout_constraintStart_toStartOf="@+id/guideline3"
+            app:layout_constraintTop_toBottomOf="@+id/button3"
             tools:ignore="MissingConstraints" />
 
         <Button
             android:id="@+id/button2"
             android:layout_width="80dp"
             android:layout_height="80dp"
-            android:layout_marginEnd="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="4dp"
             android:background="@drawable/background_numbers"
             android:text="2"
             android:textSize="30sp"
-            app:layout_constraintBaseline_toBaselineOf="@+id/button3"
-            app:layout_constraintEnd_toStartOf="@+id/button3"
+            app:layout_constraintEnd_toStartOf="@+id/guideline3"
+            app:layout_constraintTop_toBottomOf="@+id/button5"
             tools:ignore="MissingConstraints" />
 
         <Button
             android:id="@+id/button3"
             android:layout_width="80dp"
             android:layout_height="80dp"
-            android:layout_marginEnd="12dp"
+            android:layout_marginStart="4dp"
+            android:layout_marginTop="8dp"
             android:background="@drawable/background_numbers"
             android:text="3"
             android:textSize="30sp"
-            app:layout_constraintBaseline_toBaselineOf="@+id/buttonAdd"
-            app:layout_constraintEnd_toStartOf="@+id/buttonAdd"
+            app:layout_constraintStart_toStartOf="@+id/guideline3"
+            app:layout_constraintTop_toBottomOf="@+id/button6"
             tools:ignore="MissingConstraints" />
 
         <Button
             android:id="@+id/buttonAdd"
             android:layout_width="80dp"
             android:layout_height="80dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginStart="8dp"
             android:background="@drawable/background_function"
             android:text="+"
             android:textSize="30sp"
+            app:layout_constraintBaseline_toBaselineOf="@+id/button3"
             app:layout_constraintEnd_toEndOf="@+id/buttonMinus"
-            app:layout_constraintTop_toBottomOf="@+id/buttonMinus"
+            app:layout_constraintStart_toEndOf="@+id/button3"
             tools:ignore="MissingConstraints" />
 
         <Button
             android:id="@+id/button5"
             android:layout_width="80dp"
             android:layout_height="80dp"
-            android:layout_marginEnd="9dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="4dp"
             android:background="@drawable/background_numbers"
             android:text="5"
             android:textSize="30sp"
-            app:layout_constraintBaseline_toBaselineOf="@+id/button6"
-            app:layout_constraintEnd_toStartOf="@+id/button6"
+            app:layout_constraintEnd_toStartOf="@+id/guideline3"
+            app:layout_constraintTop_toBottomOf="@+id/button8"
             tools:ignore="MissingConstraints" />
 
         <Button
             android:id="@+id/button6"
             android:layout_width="80dp"
             android:layout_height="80dp"
-            android:layout_marginEnd="12dp"
+            android:layout_marginStart="4dp"
+            android:layout_marginTop="8dp"
             android:background="@drawable/background_numbers"
             android:text="6"
             android:textSize="30sp"
-            app:layout_constraintBaseline_toBaselineOf="@+id/buttonMinus"
-            app:layout_constraintEnd_toStartOf="@+id/buttonMinus"
+            app:layout_constraintStart_toStartOf="@+id/guideline3"
+            app:layout_constraintTop_toBottomOf="@+id/button9"
             tools:ignore="MissingConstraints" />
 
         <Button
             android:id="@+id/buttonMultiply"
             android:layout_width="80dp"
             android:layout_height="80dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginStart="8dp"
             android:background="@drawable/background_function"
             android:text="×"
             android:textSize="30sp"
+            app:layout_constraintBaseline_toBaselineOf="@+id/button9"
             app:layout_constraintEnd_toEndOf="@+id/buttonDevide"
-            app:layout_constraintTop_toBottomOf="@+id/buttonDevide"
+            app:layout_constraintStart_toEndOf="@+id/button9"
             tools:ignore="MissingConstraints" />
 
         <Button
             android:id="@+id/button9"
             android:layout_width="80dp"
             android:layout_height="80dp"
-            android:layout_marginEnd="12dp"
+            android:layout_marginStart="4dp"
+            android:layout_marginTop="8dp"
             android:background="@drawable/background_numbers"
             android:text="9"
             android:textSize="30sp"
-            app:layout_constraintBaseline_toBaselineOf="@+id/buttonMultiply"
-            app:layout_constraintEnd_toStartOf="@+id/buttonMultiply" />
+            app:layout_constraintStart_toStartOf="@+id/guideline3"
+            app:layout_constraintTop_toBottomOf="@+id/percentage" />
 
         <Button
             android:id="@+id/button8"
             android:layout_width="80dp"
             android:layout_height="80dp"
-            android:layout_marginEnd="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="4dp"
             android:background="@drawable/background_numbers"
             android:text="8"
             android:textSize="30sp"
-            app:layout_constraintBaseline_toBaselineOf="@+id/button9"
-            app:layout_constraintEnd_toStartOf="@+id/button9" />
+            app:layout_constraintEnd_toStartOf="@+id/guideline3"
+            app:layout_constraintTop_toBottomOf="@+id/buttonBracket" />
 
         <Button
             android:id="@+id/button7"
             android:layout_width="80dp"
             android:layout_height="80dp"
-            android:layout_marginStart="14dp"
-            android:layout_marginEnd="10dp"
+            android:layout_marginEnd="8dp"
             android:background="@drawable/background_numbers"
             android:text="7"
             android:textSize="30sp"
             app:layout_constraintBaseline_toBaselineOf="@+id/button8"
             app:layout_constraintEnd_toStartOf="@+id/button8"
-            app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="@+id/clearText" />
 
         <EditText
@@ -276,47 +281,56 @@
             android:id="@+id/buttonDevide"
             android:layout_width="80dp"
             android:layout_height="80dp"
-            android:layout_marginTop="16dp"
+            android:layout_marginStart="8dp"
             android:background="@drawable/background_function"
             android:text="÷"
             android:textSize="30sp"
-            app:layout_constraintEnd_toEndOf="@+id/result"
+            app:layout_constraintBaseline_toBaselineOf="@+id/percentage"
             app:layout_constraintStart_toEndOf="@+id/percentage"
-            app:layout_constraintTop_toBottomOf="@+id/newNumber"
             tools:ignore="MissingConstraints" />
 
         <Button
             android:id="@+id/percentage"
             android:layout_width="80dp"
             android:layout_height="80dp"
-            android:layout_marginStart="10dp"
+            android:layout_marginStart="4dp"
+            android:layout_marginTop="16dp"
             android:background="@drawable/background_function"
             android:text="%"
             android:textSize="30sp"
-            app:layout_constraintBaseline_toBaselineOf="@+id/buttonDevide"
-            app:layout_constraintStart_toEndOf="@+id/buttonBracket" />
+            app:layout_constraintStart_toStartOf="@+id/guideline3"
+            app:layout_constraintTop_toBottomOf="@+id/newNumber" />
 
         <Button
             android:id="@+id/clearText"
             android:layout_width="80dp"
             android:layout_height="80dp"
+            android:layout_marginEnd="8dp"
             android:background="@drawable/background_buttonclear"
             android:text="AC"
             android:textSize="30sp"
             app:layout_constraintBaseline_toBaselineOf="@+id/buttonBracket"
-            app:layout_constraintStart_toStartOf="@+id/result"
+            app:layout_constraintEnd_toStartOf="@+id/buttonBracket"
             tools:ignore="MissingConstraints" />
 
         <Button
             android:id="@+id/buttonBracket"
             android:layout_width="80dp"
             android:layout_height="80dp"
-            android:layout_marginStart="10dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="4dp"
             android:background="@drawable/background_function"
             android:text="⇐"
             android:textSize="30sp"
-            app:layout_constraintBaseline_toBaselineOf="@+id/percentage"
-            app:layout_constraintStart_toEndOf="@+id/clearText" />
+            app:layout_constraintEnd_toStartOf="@+id/guideline3"
+            app:layout_constraintTop_toBottomOf="@+id/operation" />
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guideline3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintGuide_percent="0.5039578" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
